# Brake-Program

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  run.command  setup.py
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml
configs/: 2026_baseline.json  2026_inboard.json
docs/: HANDOFF.md  architecture.md  calculation_audit.md  developer_guide.md  implementation_plan.md
packaging/: BrakeDesignStudio.spec  BrakeLab.spec  icon.icns  launcher.py  make_icon.py
reference/: Braking Calculations.xlsx
src/brakelab/: __init__.py  __main__.py  cli.py  reference_configs.py
src/brakelab/analyses/: __init__.py  base.py  optimization.py  sensitivity.py
src/brakelab/app/: __init__.py  _bootstrap.py  controller.py  field_spec.py  forward_spec.py  main.py  output_spec.py  theme.py  thermal_spec.py  uikit.py
src/brakelab/components/: __init__.py  catalog.py
src/brakelab/core/: __init__.py  attrpath.py  balance.py  brakes.py  dynamics.py  engine.py  forward.py  hydraulics.py  models.py  pedal_travel.py  performance.py  requirements.py  results.py  thermal.py  tires.py  unit_convert.py  units.py  validation.py
src/brakelab/optimization/: __init__.py  metrics.py  problem.py  report.py  runner.py  sensitivity.py
src/brakelab/persistence/: __init__.py  config_io.py  (+2 more)
tests/: test_balance.py  test_components.py  test_golden.py  test_optimization.py  test_performance.py  test_persistence.py  test_properties.py  test_requirements.py  test_seed_presets.py  test_shared_library.py  test_thermal.py  test_thermal_sim.py
(+34 files in other folders)
